clusters/default/apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-web
spec:
  type: ClusterIP
  selector:
    app: syncthing
  ports:
    - name: web-ui
      port: 8384
      targetPort: 8384
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
spec:
  type: NodePort
  selector:
    app: syncthing
  ports:
    - name: sync-tcp
      port: 22000
      targetPort: 22000
      protocol: TCP
      nodePort: 32000
    - name: sync-udp
      port: 22000
      targetPort: 22000
      protocol: UDP
      nodePort: 32000
